--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title> Portfolio - Page principale </title>
+    </head>
+        <style>
+            body {background-color: #C0C0C0;}
+            h1 {font-family: "Papyrus"; font-size: 60px; color: white; background-color: #71797E; text-align: center; outline-style: solid;}
+            p {font-family: "Papyrus"; text-align: center; font-size: 50px; background-color: #A9A9A9; outline-style: dashed;}
+            li {font-family: "Papyrus"; font-size: 40px; padding: 40px;}
+        </style>
+    <body>
+        <h1> Qui suis-je ? </h1> <br>
+        <p> Bienvenue sur mon portfolio </p>
+        <ul>
+            <li> <a href="education.html"> Éducation </a> </li>
+            <li> <a href="emplois.html"> Emplois </a> </li>
+            <li> <a href="realisations.html"> Réalisations </a> </li>
+            <li> <a href="certifications.html"> Certifications </a> </li>
+            <li> <a href="passetemps.html"> Passe-temps </a> </li>
+            <li> <a href="contact.html"> Contact </a> </li>
+        </ul>
+        <br> <br> <br>
+    </body>
+</html>
+
+
+
+
+
+
 
